# Face-Recognize-OpenCv_Tensorflow

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: label_bck
app/src/main/java/br/com/helpdev/facedetect/: MainActivity.java  ParenMainActivity.java  ScanRecognizeFace.java
app/src/main/java/com/maedi/soft/ino/recognize/face/: AppContext.java  MainActivity.java  OpenFaceCamera.java  Recognizer.java
app/src/main/java/com/maedi/soft/ino/recognize/face/adapter/: RecyclerPreviewPhotoCamera.java
app/src/main/java/com/maedi/soft/ino/recognize/face/env/: FileUtils.java
app/src/main/java/com/maedi/soft/ino/recognize/face/ml/: LibSVM.java
app/src/main/java/com/maedi/soft/ino/recognize/face/model/: ListObject.java
app/src/main/java/com/maedi/soft/ino/recognize/face/recognizeupdate/: SupportVectorMachine.java
app/src/main/java/com/maedi/soft/ino/recognize/face/recognizeupdate/rcgutils/: FileHelper.java  MatName.java  MatXml.java  OneToOneMap.java  PreferencesHelper.java
app/src/main/java/com/maedi/soft/ino/recognize/face/utils/: DataStatic.java  FuncHelper.java
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/facedetect/: CMakeLists.txt
app/src/main/jni/facedetect/cpp/: DetectionBasedTracker_jni.cpp  DetectionBasedTracker_jni.h
app/src/main/jni/jnilibsvm/: common.h  jnilibsvm.cpp
app/src/main/jni/jnilibsvm/libsvm/: svm-predict.cpp  svm-predict.h
app/src/main/res/anim/: overlay_out_to_top_fast1.xml
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_open_face_camera.xml  activity_parent_main.xml  activity_scan_face.xml  camera_connection_fragment_tracking.xml  list_preview_photo_camera.xml
app/src/main/res/values/: dimens.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary24136/: build.gradle
openCVLibrary343/src/main/java/org/opencv/core/: MatOfRect.java
